--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-1 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,5 +9,7 @@
 <body>
     <h1>test</h1>
     <h2>웹2 과정</h2>
+
+
 </body>
 </html>
