--- a/day1/02_text.html
+++ b/day1/02_text.html
@@ -116,7 +116,7 @@
         <h2>word-break : keep-all;</h2>
         <p> when an unknown printer took of type and scrambled it to make a type specimen book.</p>
     </div>
-
+    <div class="home">1일차 복습 부분</div>
 
 </body>
 </html>
