--- a/Day03/02_기본레이아웃/index.html
+++ b/Day03/02_기본레이아웃/index.html
@@ -34,7 +34,7 @@
                 <h2><span>Web Design, Your Future</span>
                 끊임없이 연습하고, 빈틈없이 공부해요: )
             </h2>
-            <p>웹 퍼블리셔\웹 디자이너</p>
+            <p>웹 퍼블리셔 | 웹 디자이너</p>
             </div>
             <p class="img"><img src="./img/img_01.png" alt="img_01"></p>
             <ul>
