--- a/Day03/02_기본레이아웃/index.html
+++ b/Day03/02_기본레이아웃/index.html
@@ -39,7 +39,7 @@
             <p class="img"><img src="./img/img_01.png" alt="img_01"></p>
             <ul>
                 <li>
-                    <h3>HTML 기초 개념과 실습<bg/>
+                    <h3>HTML 기초 개념과 실습<br/>
                     <b>필수적인 내용과 다양한 실무 연습</b>
                 </h3>
                 </li>
@@ -62,19 +62,21 @@
     <!-- section problems -->
     <section class="problems">
         <div class="inner">
-            <h2>problems</h2>
-            <p>이런 고민을 가진 분들께 추천합니다.</p>
+            <div class="title">
+                <h2>problems</h2>
+                <p>이런 고민을 가진 분들께 추천합니다.</p>
+            </div>
+            <ul>
+                <li><p class="icon"><img src="./img/icon_1.png" alt="icon_1"></p>
+                <h3>와이어프레임 분석이 어려운<br>웹 디자인 기능사 수험생</h3></li>
+                <li><p class="icon"><img src="./img/icon_2.png" alt="icon_2"></p>
+                <h3>potoshop, Illustator 툴 사용이<br>어려운 수강생</h3></li>
+                <li><p class="icon"><img src="./img/icon_3.png" alt="icon_3"></p>
+                <h3>열심히 공부한 것 같은데,<br>시험장에만 가면 떨리는 수험생</h3></li>
+                <li><p class="icon"><img src="./img/icon_4.png" alt="icon_4"></p>
+                <h3>와이어프레임 분석이 어려운<br>웹 디자인 기능사 수험생</h3></li>
+            </ul>
         </div>
-        <ul>
-            <li><p class="img"><img src="./img/icon_1.png" alt="icon_1"></p>
-            <h3>와이어프레임 분석이 어려운<br>웹 디자인 기능사 수험생</h3></li>
-            <li><p class="img"><img src="./img/icon_2.png" alt="icon_2"></p>
-            <h3>potoshop, Illustator 툴 사용이<br>어려운 수강생</h3></li>
-            <li><p class="img"><img src="./img/icon_3.png" alt="icon_3"></p>
-            <h3>열심히 공부한 것 같은데,<br>시험장에만 가면 떨리는 수험생</h3></li>
-            <li><p class="img"><img src="./img/icon_4.png" alt="icon_4"></p>
-            <h3>와이어프레임 분석이 어려운<br>웹 디자인 기능사 수험생</h3></li>
-        </ul>
     </section>
 
     <!-- section.detail -->
@@ -84,7 +86,7 @@
             <table cellspacing="0">
                 <tr>
                     <td class="title">수강명</td>
-                    <td>WEV 02</td>
+                    <td>WEB 02</td>
                     <td class="title">기간</td>
                     <td>2021.01~2021.12</td>
                 </tr>
@@ -106,7 +108,7 @@
 
     <!-- footer -->
     <footer>
-        Copyright 2022. SBS academy All Rights Reserved.
+        Copyright 2022. SBS Academy All Rights Reserved.
     </footer>
 
 
