--- a/Day08/01_변형속성/04_skew.html
+++ b/Day08/01_변형속성/04_skew.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traslate</title>
-    <link rel="stylesheet" href="css/01_translate.css">
+    <meta name="viewport" content="width=device-width, initial-skew=1.0">
+    <title>skew</title>
+    <link rel="stylesheet" href="css/04_skew.css">
 </head>
 <body>
+
     <div class="container">
         <div class="inner">
+
             <div class="box">
-                <div class="item translate1"></div>
+                <div class="item skew1"></div>
                 <div class="item absolute"></div>
-                translate(45px, 45px)
+                    skew(45deg);
             </div>
             <div class="box">
-                <div class="item translate2"></div>
+                <div class="item skew2"></div>
                 <div class="item absolute"></div>
-                translateX(45px)
+                    skewX(45deg);
             </div>
             <div class="box">
-                <div class="item translate3"></div>
+                <div class="item skew3"></div>
                 <div class="item absolute"></div>
-                translateY(45px)
+                    skewY(45deg);
             </div>
         </div>
     </div>
+
+    
+    
 </body>
 </html>
