--- a/login/login.html
+++ b/login/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,29 +8,40 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="css/login.css">
 </head>
+
 <body>
-    <div id="wrap">
 
-        <div class="container">
+    <div class="container">
 
-            <div class="logo"><img src="images/logo.png" alt=""></div>
-            <div class="id"></div>
-            <div class="pw">
-            <div class="check-box">
-                <div class="id-save"></div>
-                <div class="auto-login"></div>
-            </div>
-            <div class="login"></div>
-            <div class="join"></div>
-            <div class="copy"></div>
-            </div>
-
+        <div class="logo">
+            <img src="images/logo.png" alt="logo">
+        </div>
+        <div class="id">
+            <label>
+                <input class="input_text" type="text" name="id" placeholder="아이디">
+            </label>
+        </div>
+        <div class="pw">
+            <label>
+                <input class="input_text" type="text" name="passward" placeholder="비밀번호">
+            </label>
         </div>
 
+        <div class="check-box">
+            <label class="input_check">아이디 저장
+                <input class="idsave" type="checkbox"><span class="checkmark"></span>
+            </label>
+            <label class="input_check">자동 로그인
+                <input class="idsave" type="checkbox"><span class="checkmark"></span>
+            </label>
+            
+        </div>
+
+        <div class="login"><span>로그인</span></div>
+        <div class="join"><span>회원가입</span></div>
+        <div class="copy">copyright&copy; 2022 ALOHA. All right reserved.</div>
     </div>
-
-
-
-
+    
 </body>
+
 </html>
