--- a/Day09/index.html
+++ b/Day09/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title> 웹 사이트 제작</title>
+    
+    <!-- fontawsome 사이트 (아이콘 사용 가능 라이브러리 링크) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -11,7 +14,7 @@
     <div class="wrap">
         <!-- header -->
         <header>
-            <div class="ineerHeader">
+            <div class="innerHeader">
                 <h1 class="logo">
                     <a href="index.html">
                         <img src="images/logo.png" alt="로고">
@@ -60,28 +63,25 @@
         <section class="visual">
             <ul class="slide">
                 <li><img src="images/visual01.jpg" alt="visual01">
-                    <div class="txt">
+                    <div class="txt en">
                         <div>TYPE IT</div>
-                        <div>AND CODE IT</div>
-                        <a href="#" class="en">FIND MORE</a>
-                        <span class="mask"></span>
+                        <div>AND CODE IT</div>  
                     </div>
+                    <a href="#" class="find en">FIND MORE <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
                 </li>
                 <li><img src="images/visual02.jpg" alt="visual02">
-                    <div class="txt">
+                    <div class="txt en">
                         <div>TYPE IT</div>
-                        <div>AND CODE IT</div>
-                        <a href="#" class="en">FIND MORE</a>
-                        <span class="mask"></span>
+                        <div>AND CODE IT</div>   
                     </div>
+                    <a href="#" class="find en">FIND MORE <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
                 </li>
                 <li><img src="images/visual03.jpg" alt="visual03">
-                    <div class="txt">
+                    <div class="txt en">
                         <div>TYPE IT</div>
                         <div>AND CODE IT</div>
-                        <a href="#" class="en">FIND MORE</a>
-                        <span class="mask"></span>
                     </div>
+                    <a href="#" class="find en">FIND MORE <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
                 </li>
             </ul>
         </section>
@@ -89,44 +89,49 @@
 
         <!-- contents -->
         <section class="content">
-            <span class="line a"></span>
-            <span class="line b"></span>
-            <span class="line c"></span>
-
-
-            <!-- 이미지 컨텐츠 영영 -->
-            <div class="infomation">
-                <div class="scrollBox" id="scroll">
-                    <a href="" class="scroll en">SCROLL DOWN
-                        <span><img src="images/scrolldown.png" alt=""></span>
-                    </a>
-                </div>
-                <div class="inner animation">
-                    <div class="title">
-                        <div class="en">EDU</div>
-                        <div class="en">Service</div>
-                        <p>수강생 여러분의 미래가 디자인의 미래가 됩니다.</p>
-                    </div>
-                </div>
-                <div class="slideBox">
-                    <ul class="slide2">
-                        <li><a href="">
-                                <p class="img"><span><img src="" alt=""></span></p>
-                            </a></li>
-                        <li><a href="">
-                                <p class="img"><span><img src="" alt=""></span></p>
-                            </a></li>
-                        <li><a href="">
-                                <p class="img"><span><img src="" alt=""></span></p>
-                            </a></li>
-                        <li><a href="">
-                                <p class="img"><span><img src="" alt=""></span></p>
-                            </a></li>
-                    </ul>
-                    <a href="" class="more en">FIND MORE</a>
-                </div>
+            <div class="title en">
+                <h2 class="en">About Academy <span>!</span></h2>
+                <p>디자인 및 컴퓨터 교육의 리더, <br class="mo">SBS 아카데미를 소개합니다.</p>
             </div>
 
+            <ul>
+                <li>
+                    <a href="#">
+                        <p class="img"><img src="images/about01.jpg" alt="교육소개"></p>
+                        <div class="text">
+                            <h3>디자인 과정</h3>
+                            <p>포토샵 부터 제품 디자인까지</p>
+                            <p class="more">
+                                <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                                more</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <p class="img"><img src="images/about02.jpg" alt="교육소개"></p>
+                        <div class="text">
+                            <h3>프로그래밍 과정</h3>
+                            <p>파이썬 부터 JAVA 프로그래밍 까지</p>
+                            <p class="more">
+                                <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                                more</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <p class="img"><img src="images/about03.jpg" alt="교육소개"></p>
+                        <div class="text">
+                            <h3>자격증 과정</h3>
+                            <p>웹 디자인 기능사 부터 컴퓨터그래픽스 운용기능사 까지</p>
+                            <p class="more">
+                                <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+                                more</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
 
             <!-- 비디오 컨텐츠 영역 -->
 
