--- a/Day09/index.html
+++ b/Day09/index.html
@@ -23,6 +23,7 @@
 
 
                 <!-- gnb = global navigation bar -->
+                <nav>
                 <ul class="gnb">
                     <li><a href="#">회사 소개</a>
                         <ul class="inner">
@@ -56,6 +57,12 @@
                         </ul>
                     </li>
                 </ul>
+                </nav>
+                <nav class="gnbMo">
+                    <a href="#">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </nav>
             </div>
         </header>
 
@@ -132,14 +139,138 @@
                     </a>
                 </li>
             </ul>
+        </section>
 
-            <!-- 비디오 컨텐츠 영역 -->
+    <!-- service -->    
+        <section class="service">
+            <div class="title">
+                <h2 class="en">Be a Creative Leader <span>.</span></h2>
+                <p>
+                    SBS아카데미컴퓨터아트는 디지털 아트의 가장 중요한 요소라고 할 수 있는 창의성, 하이테크놀로지, <br>
+                    감성의 3가지 주요 목표를 가지고 대한민국 디지털 아트의 리더를 양성하고 있습니다.
+                </p>
+            </div>
 
+            <div class="imgBox">
+                <div class="inner">
+                    <h3 class="en">Creativity<span>!</span></h3>
+                    <div class="bottom">
+                        <p>
+                            디지털 아트'의 중심에서, 흥미로운 작업들을 만들어내고 리더가 된다는 것은 분명 매력적인 삶에 한 걸음 다가가는 일이 될 것이다.
+                            결국 이 모든 것의 시작은 '상상력'이라는 목표하에, 모든 교육생은 디자인을 기본으로 창의적 사고를 배양하는 것을 목표로 하고 있다. 세상을 바라보는 시각을 갖는
+                            것에서부터 선생님과 돈독한 관계까지 교육과 철학을 유기적으로 엮어내기 위해 다양한 시도를 하고 있다.
 
+                            그리고 바로 이 점이 SBS아카데미컴퓨터아트학원의 가장 큰 차별점이다.
+                        </p>
+                        <a href="#">SBS아카데미컴퓨터아트학원</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- portfolio -->
+        <section class="portfolio">
+            <div class="title">
+                <h2 class="en">Portfolio<span>.</span></h2>
+            <p>
+                완성된 포트폴리오가 취업까지 이어질 수 있도록 돕겠습니다 :3
+            </p>
+            </div>
+
+            <ul class="tabList">
+                <!-- current : 처음부터 선택되어 있게 하는 방법 -->
+                <li class="current"><a href="#">아트웍</a></li>
+                <li class=""><a href="#">웹디자인/퍼블리셔</a></li>
+                <li class=""><a href="#">편집디자인</a></li>
+                <li class=""><a href="#">CG 마야/모션</a></li>
+                <li class=""><a href="#">인테리어 · 제품</a></li>
+            </ul>
+
+            <div class="gridBox">
+                <div class="img-grid">
+                    <div class="item"><img src="images/portfolio01.jpg" alt="portfolio1"></div>
+                    <div class="item"><img src="images/portfolio02.jpg" alt="portfolio2"></div>
+                    <div class="item"><img src="images/portfolio03.jpg" alt="portfolio3"></div>
+                    <div class="item"><img src="images/portfolio04.jpg" alt="portfolio4"></div>
+                    <div class="item"><img src="images/portfolio05.jpg" alt="portfolio5"></div>
+                    <div class="item"><img src="images/portfolio06.jpg" alt="portfolio6"></div>
+                    <div class="item"><img src="images/portfolio07.jpg" alt="portfolio7"></div>
+                    <div class="item"><img src="images/portfolio08.jpg" alt="portfolio8"></div>
+                    <div class="item"><img src="images/portfolio09.jpg" alt="portfolio9"></div>
+                    <div class="item"><img src="images/portfolio10.jpg" alt="portfolio10"></div>
+                    <div class="item"><img src="images/portfolio11.jpg" alt="portfolio11"></div>
+                    <div class="item"><img src="images/portfolio12.jpg" alt="portfolio12"></div>
+                    <div class="item"><img src="images/portfolio13.jpg" alt="portfolio13"></div>
+                    <div class="item"><img src="images/portfolio14.jpg" alt="portfolio14"></div>
+                    <div class="item"><img src="images/portfolio15.jpg" alt="portfolio15"></div>
+                    <div class="item"><img src="images/portfolio16.jpg" alt="portfolio16"></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- SNS -->
+        <section class="sns">
+            <div class="title">
+                <h2 class="en">SNS CHANNEL <span>.</span></h2>
+                <p>
+                    SNS를 이용하여 SBS아카데미를 더욱 다양하게 만나보세요 <span>:-3</span>
+                </p>
+            </div>
+
+            <ul>
+                <li>
+                    <a href="#">
+                        <p class="img"><img src="images/sns01.jpg" alt="상담"></p>
+                        <div class="bottom">
+                            <p class="color">1:1 멘토 상담</p>
+                            <p class="">학사 상담, 취업 상담을 전담하여 관리합니다.</p>
+                            <p class="time">2021.11.11 <span>11:11</span></p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="img"><img src="images/sns02.jpg" alt="강의실"></p>
+                        <div class="bottom">
+                            <p class="color">쾌적한 강의실</p>
+                            <p class="">화이트 톤의 화사한 인테리어와 최신식 PC 완비</p>
+                            <p class="time">2021.11.11 <span>11:11</span></p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="img"><img src="images/sns03.jpg" alt="오시는길"></p>
+                        <div class="bottom">
+                            <p class="color">오시는 길</p>
+                            <p class="">SBS아카데미 컴퓨터아트학원 노원점 오시는 길</p>
+                            <p class="time">2021.11.11 <span>11:11</span></p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
 
         </section>
 
+
+        <!-- footer -->
+
+        <footer>
+            <div class="inner">
+                <h2 class="ftLogo"><img src="images/logo.png" alt=""></h2>
+                    <ul class="address">
+                        <li>01695 서울특별시 노원구 노해로 83길</li>
+                        <li>Copyright 2021</li>
+                    </ul>
+                    <ul class="list">
+                        <li><a href="#">온라인 수강시스템</a></li>
+                        <li><a href="#">고객문의</a></li>
+                        <li><a href="#">공지사항</a></li>
+                        <li><a href="#">개인정보 처리방침</a></li>
+                        <li><a href="#">FAMILY SITE</a></li>
+                    </ul>
+            </div>
+        </footer>
 
     </div>
 </body>
